# code_agent

./: .gitignore  MEWCODE.md  pyproject.toml
mewcode/: __main__.py  agent.py  app.py  askuser_dialog.py  cache.py  client.py  config.py  conversation.py  driver.py  permission_dialog.py  plan_dialog.py  prompts.py  serialization.py  session_dialog.py  styles.tcss  teammate_tree.py  validator.py
mewcode/agents/: __init__.py  fork.py  loader.py  notification.py  parser.py  task_manager.py  tool_filter.py  trace.py
mewcode/commands/: __init__.py  completion.py  parser.py  registry.py
mewcode/context/: __init__.py  manager.py
mewcode/filehistory/: __init__.py  history.py
mewcode/hooks/: __init__.py  conditions.py  engine.py  events.py  executors.py  loader.py  models.py
mewcode/mcp/: __init__.py  client.py  manager.py  tool_wrapper.py
mewcode/memory/: __init__.py  auto_memory.py  instructions.py  recall.py  session.py
mewcode/permissions/: __init__.py  checker.py  dangerous.py  modes.py  rules.py  sandbox.py
mewcode/skills/: __init__.py  directory.py  executor.py  loader.py  parser.py
mewcode/teams/: __init__.py  backend_detect.py  coordinator.py  mailbox.py  manager.py  models.py  progress.py  registry.py  shared_task.py  spawn_iterm2.py  (+3 more)
tests/: test_agent.py  test_commands.py  test_context.py  test_context_window.py  test_hooks.py  test_mcp.py  test_memory.py  test_permissions.py  test_recovery.py  test_replacement_state.py  test_serialization.py  test_skills.py  test_subagent.py  test_teams.py  test_tool_search.py  test_worktree.py  verify_subagent.py
(+62 files in other folders)
